--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="brand">
       <!-- Logo -->
       <div class="logo-img-wrap" title="Neko Anime MM">
-        <img class="logo-img" src="images/logo.jpg" alt="Neko Anime MM Logo" />
+        <img class="logo-img" src="logo.jpg" alt="Neko Anime MM Logo" />
       </div>
 
       <div>
